styles/header.module.less
@import './variables.module.less';

.header {
  background: var(--cr-primary-bg) !important;
  padding: 0 !important;
  position: static;
  width: 100%;
  z-index: 1;
  height: 60px !important;

  ul {
    background: var(--cr-primary-bg);
    color: var(--cr-primary-text);
    border-bottom: 1px solid var(--cr-primary-border) !important;
    height: 60px;
    li:first-child {
      flex-grow: 1;
    }
  }
}

.logo {
  padding: 0 24px !important;
  flex-grow: 1;

  &:hover {
    text-decoration: none;
    transition: none !important;
  }

  &::after {
    border-bottom: 0 !important;
  }
}

.search {
  margin-left: auto;
  padding-right: 0 !important;

  @media (max-width: @screen-sm) {
    padding-left: 0 !important;
  }
}

.search, .navigation {
  display: flex !important;
  align-items: center !important;
  user-select: none;
}

.navigation {
  padding-left: 8px !important;
}

.navigation::after, .search::after {
  display: none;
}

.darkModeSwitch {
  flex-direction: row;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 6px 5px;
  height: 34px;
  background: var(--cr-tertiary-bg);
  border-radius: 2px;
  border: 1px solid var(--cr-secondary-border);
  color: var(--cr-primary-text);
  cursor: pointer;

  > span {
    width: 100%;
    gap: 8px;
    display: flex;
  }

  img {
    height: 22px;
    width: 22px;
    border-radius: 999px;
  }

  img[alt="sun"] {
    padding: 2px;
    background-color: #2B2111;
  }

  img[alt="moon"] {
    background-color: @geekblue-1;
  }
 }


@media (max-width: @screen-md) {
  .darkModeSwitch {
    border: none;
    padding: 0;
    margin-left: 16px;

    img {
      height: 28px;
      width: 28px;
      padding: 4px;
    }
  }
}

